DifferTest refactoring. Expectations moved to files. Added all required tests.